--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </button>
                 <div class="dropdown-content">
                     <a href="https://www.linkedin.com/in/juliadischell/">LinkedIn</a>
-                    <a href="assets/images/JDresume2019.pdf">Resume</a>
+                    <a href="../Responsive-Portfolio/assets/images/JDresume2019.pdf">Resume</a>
                     <a href="https://github.com/JulesDisch">GitHub</a>
                 </div>
             </div>
